# MediaPlayer

./: .gitignore  .gitignore.txt  CMakeLists.txt  ChangeMediaButton.ui.qml  ChangeTimeButtonLeft.qml  ChangeTimeButtonLeft.ui.qml  ChangeTimeButtonRight.ui.qml  EqualizerSlider.qml  EqualizerWindow.qml  FilenameBar.qml  FiltersWindow.qml  Main.qml  MenuBar.qml  MuteButton.qml  MuteButton.ui.qml  OptionsButton.ui.qml  PlayButton.ui.qml  README.md  ResizeButton.ui.qml  SpeedButton.qml  SpeedSlider.qml  TODO.txt  TimelineSlider.qml  TimelineSlider.ui.qml  ToolsMenu.qml  ToolsMenu.ui.qml  ToolsMenuButton.qml  VolumeSlider.qml  VolumeSlider.ui.qml  audiocontext.cpp  audiocontext.h  audioiodevice.cpp  audioiodevice.h  clock.cpp  clock.h  demuxer.cpp  demuxer.h  equalizer.cpp  equalizer.h  filters.cpp  (+28 more)
gui/: Main.qml
gui/Equalizer/: EqualizerSlider.qml  EqualizerWindow.qml
gui/Filters/: FilterSlider.qml  FiltersWindow.qml
gui/HoverPreview/: HoverPreview.qml
gui/Other/: HelpTip.qml  ResizeButton.qml  TimelineSlider.qml
gui/Playback/: ChangeMediaButton.qml  PlayButton.qml
gui/Speed/: SpeedButton.qml  SpeedSlider.qml
gui/Subtitles/: SubComboBox.qml  Subtitles.qml
gui/Tools/: OptionsButton.qml  ToolsMenu.qml  ToolsMenuButton.qml
gui/Volume/: MuteButton.qml  VolumeSlider.qml
include/: queue.h  subtitle.h
include/audio/: AudioOutputer.h  audiocontext.h  audioiodevice.h  equalizer.h  sampleconverter.h
include/media/: codec.h  decoder.h  demuxer.h  imediacontext.h  media.h  mediaparameters.h  player.h
include/subtitles/: subtitlecontext.h  subtitles.h  subtitlesoutputer.h
include/sync/: audioclock.h  clock.h  iclock.h  realtimeclock.h  synchronizer.h  threadsleeper.h  threadwaiter.h
include/video/: filters.h  frameoutput.h  imageconverter.h  videocontext.h  videopreview.h
old/: audiobuffer.cpp  audiobuffer.h
resources/: MediaPlayer.aps
src/: audiocontext.cpp  audioiodevice.cpp  demuxer.cpp  filters.cpp  frameoutput.cpp  imageconverter.cpp  main.cpp  media.cpp  playlist.cpp  videocontext.cpp
src/audio/: audiocontext.cpp  audioiodevice.cpp  equalizer.cpp  sampleconverter.cpp
src/media/: codec.cpp  decoder.cpp  demuxer.cpp  media.cpp  player.cpp
src/subtitles/: subtitlecontext.cpp  subtitles.cpp  subtitlesoutputer.cpp
src/sync/: audioclock.cpp  clock.cpp  realtimeclock.cpp  synchronizer.cpp  threadsleeper.cpp  threadwaiter.cpp
src/video/: filters.cpp  frameoutput.cpp  imageconverter.cpp  videocontext.cpp  videopreview.cpp
